# raspi-test

./: .gitignore  README.md  pyproject.toml
raspi_test/api/: whisper.py
raspi_test/integration/: voice2text.py
raspi_test/voice/: devices.py  record.py
